making progress on getElementById useage. All times run vertically as the own list item

--- a/sales.html
+++ b/sales.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    
+    <h1 id="pageTitle"></h1>
+
+    <ul id="hourOfOperation"></ul>
+
+
+
     <script src="js/app.js"></script>
   </body>
 </html>
