got working a very rough draft of document.get to render seattle lcation

--- a/sales.html
+++ b/sales.html
@@ -9,6 +9,11 @@
 
     <ul id="hourOfOperation"></ul>
 
+    <ul id="cookieStore">
+      <li style="background-color: blanchedalmond;"> HTML Examle 6am: 64 cookies
+      </li>
+    </ul>
+
 
 
     <script src="js/app.js"></script>
