added new html element to target for tokyo store, two store dislay on page

--- a/sales.html
+++ b/sales.html
@@ -7,12 +7,10 @@
   <body>
     <h1 id="pageTitle"></h1>
 
-    <ul id="hourOfOperation"></ul>
-
-    <ul id="cookieStore">
-      <li style="background-color: blanchedalmond;"> HTML Examle 6am: 64 cookies
-      </li>
+    <ul id="seattleCookieStore">
     </ul>
+
+    <ul id="tokyoCookieStore"></ul>
 
 
 
