--- a/sales.html
+++ b/sales.html
@@ -7,8 +7,7 @@
   <body>
     <h1 id="pageTitle"></h1>
 
-    <ul id="seattleCookieStore">
-    </ul>
+    <ul id="seattleCookieStore"></ul>
 
     <ul id="tokyoCookieStore"></ul>
 
