--- a/sales.html
+++ b/sales.html
@@ -7,11 +7,15 @@
   <body>
     <h1 id="pageTitle"></h1>
 
-    <ul id="seattleCookieStore"></ul>
+    <ul id="Seattle"></ul>
 
-    <ul id="tokyoCookieStore"></ul>
+    <ul id="Tokyo"></ul>
 
-    <ul id="dubaiCookieStore"></ul>
+    <ul id="Dubai"></ul>
+    
+    <ul id="Paris"></ul>
+
+    <ul id="Lima"></ul>
 
     <script src="js/app.js"></script>
   </body>
