created HTML frame and scaffolded a bit of css

--- a/index.html
+++ b/index.html
@@ -1,10 +1,45 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Cookie Counter Homepage</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Pat's Cookie Counter</title>
   </head>
   <body>
-    <a href="sales.html"> Link to Sales Page</a>
+    <header>
+      <img src="https://raw.githubusercontent.com/codefellows/seattle-201d62/master/class-08/lab-b/assets/chinook.jpg" alt="">
+
+      <h1>Welcome to Pat's Cookie Counter!</h1>
+
+      <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/frosted-cookie.jpg?raw=true" alt="">
+
+      <nav>
+        <ul>
+          <li>
+            <a href="sales.html">Sales</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <article>
+      <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/family.jpg?raw=true" alt="">
+
+      <p>
+        Meet Pat and their family. Pat, a Seattle native, has always loved what the Pacific Northwest has to offer. Of course, the fishing and seafood industry plays a huge role in daily Seattle culture. As the foodie culture continues to grow, baked goods are also finding their way into the hearts and tummies of those who visit. Those two loves are what has inspired Pat to create Salmon Cookies! Salmon cookies are tasty coffee-time confections crafted in the likeness of your beloved northwest swimmers, with just a hint of fishy goodness in every bite!
+      </p>
+    </article>
+
+    <section>
+       <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/cutter.jpeg?raw=true" alt="">
+
+      <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/shirt.jpg?raw=true" alt="">
+
+      <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/fish.jpg?raw=true" alt="">
+    </section>
+
+    <footer>
+      <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/salmon.png?raw=true" alt="">
+    </footer>
   </body>
 </html> 
