--- a/sales.html
+++ b/sales.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> Salmon Cookies</title>
+    <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
+    <title> Salmon Cookies</title>
   </head>
   <body>
+    <a href ="index.html">Back to Homepage</a>
+
     <h1 id="pageTitle"></h1>
 
     <ul id="Seattle"></ul>
