--- a/index.html
+++ b/index.html
@@ -16,11 +16,53 @@
       <nav>
         <ul>
           <li>
-            <a href="sales.html">Sales</a>
+            <a href="sales.html">Daily Sales</a>
+          </li>
+          <li>
+            Salmon Swag
           </li>
         </ul>
       </nav>
     </header>
+
+    <ul>
+      <h2>Locations</h2>
+      <li>Seattle</li>
+        <p>"Seattle Salmon"
+          Lorem Ipsum Sit Amet
+          Phone: 206.555.5555
+          Email: infomer@fakeaddr.com
+          Hours: 6am - 8pm
+        </p>
+      <li>Tokyo</li>
+        <p>Dummy Address
+          Lorem Ipsum Sit Amet
+          Phone: 800-123-4567
+          Email: info@fakeaddr.com
+          Hours: 6am - 8pm
+        </p>
+      <li>Dubai</li>
+        <p>Dummy Address
+          Lorem Ipsum Sit Amet
+          Phone: 800-555-4567
+          Email: infoma@fakeaddr.com
+          Hours: 6am - 8pm
+        </p>
+      <li>Paris</li>
+        <p>Dummy Address
+          Lorem Ipsum Sit Amet
+          Phone: 800-123-5555
+          Email: inf@fakeaddr.com
+          Hours: 6am - 8pm
+        </p>
+      <li>Lima</li>
+        <p>Dummy Address
+          Lorem Ipsum Sit Amet
+          Phone: 555-123-4567
+          Email: inform@fakeaddr.com
+          Hours: 6am - 8pm
+        </p>
+    </ul>
 
     <article>
       <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/family.jpg?raw=true" alt="">
@@ -33,6 +75,12 @@
     <section>
        <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/cutter.jpeg?raw=true" alt="">
 
+       <p>
+         Sales are soaring, not only in Seattle, but throughout all five Cookie Counter stores worldwide!
+
+         Can't get enough of Salmon Cookies by consuming the treats themselves? Then check out our Salmon Swag. Bring the Salmon Spirit to your own home with our signature salmon cookie cutter, a slick salmon shirt, or school of salmon stuffies. 
+       </p>
+
       <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/shirt.jpg?raw=true" alt="">
 
       <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/fish.jpg?raw=true" alt="">
@@ -40,6 +88,9 @@
 
     <footer>
       <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/salmon.png?raw=true" alt="">
+      <p>
+        Home Store Seattle
+      </p>
     </footer>
   </body>
 </html> 
