still not working on the table... but did add a very basic event listener for submit

--- a/sales.html
+++ b/sales.html
@@ -1,16 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <title> Salmon Cookies</title>
   </head>
   <body>
+
     <a href ="index.html">Back to Homepage</a>
 
     <h1 id="pageTitle"></h1>
 
     <ul id="Seattle"></ul>
+
+<!-- start of create your own store form -->
+    <form id="cookieStoreForm">
+      <fieldset>
+        <legend>Create Your Own Cookie Store!</legend>
+
+        <label for="city">Your City</label>
+        <input type="text" name="city">
+
+        <label for="minHourlyCustomers">Min Hourly Customers</label>
+        <input type="text" name="minHourlyCustomers">
+
+<!-- submit button -->
+        <input type="submit" value="View Your Store!">
+
+      </fieldset>
+    </form>
+<!-- form ends -->
 
     <ul id="Tokyo"></ul>
 
