added event listener which stores all input values into variables and reads in console.log

--- a/sales.html
+++ b/sales.html
@@ -24,7 +24,19 @@
         <input type="text" name="city">
 
         <label for="minHourlyCustomers">Min Hourly Customers</label>
-        <input type="text" name="minHourlyCustomers">
+        <input type="number" name="minHourlyCustomers">
+
+        <label for="maxHourlyCustomers">Max Hourly Customers</label>
+        <input type="number" name="maxHourlyCustomers">
+
+        <label for="avgCookiesPerCustomer">Avg Cookies per Customer</label>
+        <input type="text" name="avgCookiesPerCustomer">
+
+        <label for="hoursOpen">Hours Open</label>
+        <input type="text" name="hoursOpen">
+
+        <lable for="picture">Picture url</lable>
+        <input type="text" name="picture">
 
 <!-- submit button -->
         <input type="submit" value="View Your Store!">
