added a total for all sales of all stores, updates when new store called Northgate is added

--- a/sales.html
+++ b/sales.html
@@ -32,9 +32,6 @@
         <label for="avgCookiesPerCustomer">Avg Cookies per Customer</label>
         <input type="text" name="avgCookiesPerCustomer">
 
-        <label for="hoursOpen">Hours Open</label>
-        <input type="text" name="hoursOpen">
-
         <lable for="picture">Picture url</lable>
         <input type="text" name="picture">
 
@@ -44,6 +41,7 @@
       </fieldset>
     </form>
 <!-- form ends -->
+    <ul id="Northgate"></ul>
 
     <ul id="Tokyo"></ul>
 
