data is now in table, with a working form

--- a/sales.html
+++ b/sales.html
@@ -13,6 +13,12 @@
 
     <h1 id="pageTitle"></h1>
 
+    <!-- table for stores -->
+
+    <table id=salesTable>Cookie Sales</table>
+
+
+
     <ul id="Seattle"></ul>
 
 <!-- start of create your own store form -->
@@ -32,8 +38,8 @@
         <label for="avgCookiesPerCustomer">Avg Cookies per Customer</label>
         <input type="text" name="avgCookiesPerCustomer">
 
-        <lable for="picture">Picture url</lable>
-        <input type="text" name="picture">
+        <!-- <lable for="picture">Picture url</lable>
+        <input type="text" name="picture"> -->
 
 <!-- submit button -->
         <input type="submit" value="View Your Store!">
