complete js, incomplete html css

--- a/index.html
+++ b/index.html
@@ -6,62 +6,63 @@
     <title>Pat's Cookie Counter</title>
   </head>
   <body>
-    <header>
+    <header>  
+        <nav>
+          <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/frosted-cookie.jpg?raw=true" alt="">
+          <ul>
+            <li>
+              <a href="sales.html">Daily Sales</a>
+            </li>
+            <li>
+              Salmon Swag
+            </li>
+          </ul>
+        </nav>
+        
       <img src="https://raw.githubusercontent.com/codefellows/seattle-201d62/master/class-08/lab-b/assets/chinook.jpg" alt="">
-
       <h1>Welcome to Pat's Cookie Counter!</h1>
-      
-      <nav>
-        <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/frosted-cookie.jpg?raw=true" alt="">
-        <ul>
-          <li>
-            <a href="sales.html">Daily Sales</a>
-          </li>
-          <li>
-            Salmon Swag
-          </li>
-        </ul>
-      </nav>
     </header>
 
-    <ul>
-      <h2>Locations</h2>
-      <li>Seattle</li>
-        <p>"Seattle Salmon"
-          Lorem Ipsum Sit Amet
-          Phone: 206.555.5555
-          Email: infomer@fakeaddr.com
-          Hours: 6am - 8pm
-        </p>
-      <li>Tokyo</li>
-        <p>Dummy Address
-          Lorem Ipsum Sit Amet
-          Phone: 800-123-4567
-          Email: info@fakeaddr.com
-          Hours: 6am - 8pm
-        </p>
-      <li>Dubai</li>
-        <p>Dummy Address
-          Lorem Ipsum Sit Amet
-          Phone: 800-555-4567
-          Email: infoma@fakeaddr.com
-          Hours: 6am - 8pm
-        </p>
-      <li>Paris</li>
-        <p>Dummy Address
-          Lorem Ipsum Sit Amet
-          Phone: 800-123-5555
-          Email: inf@fakeaddr.com
-          Hours: 6am - 8pm
-        </p>
-      <li>Lima</li>
-        <p>Dummy Address
-          Lorem Ipsum Sit Amet
-          Phone: 555-123-4567
-          Email: inform@fakeaddr.com
-          Hours: 6am - 8pm
-        </p>
-    </ul>
+    <section>
+      <ul>
+        <li><h2>Locations</h2></li>
+        <li>Seattle</li>
+          <p>"Seattle Salmon"<br>
+            Lorem Ipsum Sit Amet<br>
+            Phone: 206.555.5555<br>
+            Email: infomer@fakeaddr.com<br>
+            Hours: 6am - 8pm<br>
+          </p><br>
+        <li>Tokyo</li>
+          <p>Dummy Address<br>
+            Lorem Ipsum Sit Amet<br>
+            Phone: 800-123-4567<br>
+            Email: info@fakeaddr.com<br>
+            Hours: 6am - 8pm<br>
+          </p><br>
+        <li>Dubai</li>
+          <p>Dummy Address<br>
+            Lorem Ipsum Sit Amet<br>
+            Phone: 800-555-4567<br>
+            Email: infoma@fakeaddr.com<br>
+            Hours: 6am - 8pm<br>
+          </p><br>
+        <li>Paris</li>
+          <p>Dummy Address<br>
+            Lorem Ipsum Sit Amet<br>
+            Phone: 800-123-5555<br>
+            Email: inf@fakeaddr.com<br>
+            Hours: 6am - 8pm<br>
+          </p><br>
+        <li>Lima</li>
+          <p>Dummy Address<br>
+            Lorem Ipsum Sit Amet<br>
+            Phone: 555-123-4567<br>
+            Email: inform@fakeaddr.com<br>
+            Hours: 6am - 8pm<br>
+          </p><br>
+      </ul>
+    </section>
 
     <article>
       <img src="https://github.com/codefellows/seattle-201d62/blob/master/class-08/lab-b/assets/family.jpg?raw=true" alt="">
